[package]
name = "totoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { verison="1.34", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lib]
name = "totoro"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "sub-client"
path = "src/sub_client.rs"

[[bin]]
name = "pub-client"
path = "src/pub_client.rs"